testsuite/tests/typecheck/should_fail/T7697.stderr

T7697.hs:3:6: error: [GHC-83865]
    • Expected a constraint, but ‘Int’ has kind ‘*’
    • In the type signature: f :: Int => Int
